spacing on feed page fixed

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -11,6 +11,8 @@ html {
 }
 body {
   margin: 0;
+  margin-top: 50px;
+  padding-top: 50px;
 }
 article,
 aside,
